wordsmith from API ref

--- a/docs/guides/local-testing-mode.ipynb
+++ b/docs/guides/local-testing-mode.ipynb
@@ -51,23 +51,23 @@
     "\n",
     "    See the [`AerSimulator`](https://qiskit.github.io/qiskit-aer/stubs/qiskit_aer.AerSimulator) documentation for more information.\n",
     "\n",
-    "    * ``\"automatic\"``: Default simulation method. Select the simulation method automatically based on the circuit and noise model.\n",
+    "    * ``\"automatic\"``: Default simulation method. Select the simulation method automatically, based on the circuit and noise model.\n",
     "\n",
-    "    * ``\"statevector\"``: A dense statevector simulation that can sample measurement outcomes from *ideal* circuits with all measurements at end of the circuit. For noisy simulations each shot samples a randomly sampled noisy circuit from the noise model.\n",
+    "    * ``\"statevector\"``: A dense statevector simulation that can sample measurement outcomes from *ideal* circuits with all measurements at end of the circuit. For noisy simulations, each shot samples a randomly sampled noisy circuit from the noise model.\n",
     "\n",
-    "    * ``\"density_matrix\"``: A dense density matrix simulation that may sample measurement outcomes from *noisy* circuits with all measurements at end of the circuit.\n",
+    "    * ``\"density_matrix\"``: A dense density matrix simulation that can sample measurement outcomes from *noisy* circuits with all measurements at end of the circuit.\n",
     "\n",
     "    * ``\"stabilizer\"``: An efficient Clifford stabilizer state simulator that can simulate noisy Clifford circuits if all errors in the noise model are also Clifford errors.\n",
     "\n",
-    "    * ``\"extended_stabilizer\"``: An approximate simulated for Clifford + T circuits based on a state decomposition into ranked-stabilizer state. The number of terms grows with the number of non-Clifford (T) gates.\n",
+    "    * ``\"extended_stabilizer\"``: An approximate simulator for Clifford + T circuits based on a state decomposition into ranked-stabilizer state. The number of terms grows with the number of non-Clifford (T) gates.\n",
     "\n",
     "    * ``\"matrix_product_state\"``: A tensor-network statevector simulator that uses a Matrix Product State (MPS) representation for the state. This can be done either with or without truncation of the MPS bond dimensions depending on the simulator options. The default behavior is no truncation.\n",
     "\n",
-    "    * ``\"unitary\"``: A dense unitary matrix simulation of an ideal circuit. This simulates the unitary matrix of the circuit itself rather than the evolution of an initial quantum state. This method can only simulate gates, it does not support measurement, reset, or noise.\n",
+    "    * ``\"unitary\"``: A dense unitary matrix simulation of an ideal circuit. This simulates the unitary matrix of the circuit itself rather than the evolution of an initial quantum state. This method can only simulate gates; it does not support measurement, reset, or noise.\n",
     "\n",
-    "    * ``\"superop\"``: A dense superoperator matrix simulation of an ideal or noisy circuit. This simulates the superoperator matrix of the circuit itself rather than the evolution of an initial quantum state. This method can simulate ideal and noisy gates, and reset, but does not support measurement.\n",
+    "    * ``\"superop\"``: A dense superoperator matrix simulation of an ideal or noisy circuit. This simulates the superoperator matrix of the circuit itself rather than the evolution of an initial quantum state. This method can simulate ideal and noisy gates and reset, but it does not support measurement.\n",
     "\n",
-    "    * ``\"tensor_network\"``: A tensor-network based simulation that supports both statevector and density matrix. Currently there is only available for GPU and accelerated by using cuTensorNet APIs of cuQuantum.\n",
+    "    * ``\"tensor_network\"``: A tensor-network-based simulation that supports both statevector and density matrix. Currently this is only available for GPU and is accelerated by using cuTensorNet APIs of cuQuantum.\n",
     "    </details>\n",
     "\n",
     "\n",
