--- a/docs/tutorials/index.mdx
+++ b/docs/tutorials/index.mdx
@@ -103,6 +103,8 @@ Qiskit Functions are a collection of pre-packaged error management and applicati
 
   * [Error mitigation with the IBM Circuit function](/docs/tutorials/error-mitigation-with-qiskit-functions)
 
+  * [Transverse-Field Ising Model Simulation: Demonstrating better performance with Q-CTRL's Qiskit Functions](/docs/tutorials/transverse-field-ising-model)
+
 - Experiment with domain-specific problems with **Application functions** -- with familiar inputs and outputs to classical solvers.
 
   * [Quantum Portfolio Optimizer - A Qiskit Function by Global Data Quantum](/docs/tutorials/global-data-quantum-optimizer)
