--- a/docs/guides/construct-circuits.ipynb
+++ b/docs/guides/construct-circuits.ipynb
@@ -432,6 +432,7 @@
    "id": "87f1e053",
    "metadata": {},
    "source": [
+"<span id=\"measure-qubits\"></span>\n",
     "## Measure qubits\n",
     "\n",
     "Measurements can be used to get the final results from the quantum register to the classical register. Note that if you are submitting circuits to a Sampler primitive, measurements are required. However, circuits submitted to an Estimator primitive cannot contain measurements.\n",
