Address review comments

--- a/docs/guides/q-ctrl-performance-management.ipynb
+++ b/docs/guides/q-ctrl-performance-management.ipynb
@@ -105,7 +105,7 @@
    "source": [
     "## Get started\n",
     "\n",
-     "Fire Opal Performance Management uses Qiskit v`2.0.0`, which is the recommended version. Supported versions are Qiskit v`2.0.0` - `2.0.2`.\n",
+    "Fire Opal Performance Management uses Qiskit v`2.0.0`, which is the recommended version. Supported versions are Qiskit >=v`2.0.0`.\n",
     "Authenticate using your [IBM Quantum Platform API key](http://quantum.cloud.ibm.com/), and select the Qiskit Function as follows. (This snippet assumes you've already [saved your account](/docs/guides/functions#install-qiskit-functions-catalog-client) to your local environment.)"
    ]
   },
@@ -702,7 +702,7 @@
  "metadata": {
   "description": "Apply automated error suppression using Fire Opal Performance Management by Q-CTRL",
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "qiskit-documentation-3.12",
    "language": "python",
    "name": "python3"
   },
@@ -716,7 +716,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3"
+   "version": "3.12.8"
   },
   "title": "Performance Management - A Qiskit Function by Q-CTRL Fire Opal"
  },
