--- a/docs/guides/q-ctrl-performance-management.ipynb
+++ b/docs/guides/q-ctrl-performance-management.ipynb
@@ -702,7 +702,7 @@
  "metadata": {
   "description": "Apply automated error suppression using Fire Opal Performance Management by Q-CTRL",
   "kernelspec": {
-   "display_name": "qiskit-documentation-3.12",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -716,7 +716,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.8"
+   "version": "3"
   },
   "title": "Performance Management - A Qiskit Function by Q-CTRL Fire Opal"
  },
