Fix notebook failures in CI (#3860)
Closes #3643 

Many of the issues with the notebook testing were credential based, but
a few valid bugs were caught. This PR should fix all of them. But I'll
run the notebook tester again just to be safe.

--- a/docs/guides/algorithmiq-tem.ipynb
+++ b/docs/guides/algorithmiq-tem.ipynb
@@ -125,12 +125,12 @@
    "source": [
     "## Get started\n",
     "\n",
-    "Authenticate using your [IBM Quantum Platform API key](http://quantum.cloud.ibm.com/), and select the TEM function as follows:"
+    "Authenticate using your [IBM Quantum Platform API key](http://quantum.cloud.ibm.com/), and select the TEM function as follows. (This snippet assumes you've already [saved your account](/docs/guides/functions#install-qiskit-functions-catalog-client) to your local environment.)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "cc0a8093",
    "metadata": {},
    "outputs": [],
@@ -139,11 +139,7 @@
     "\n",
     "tem_function_name = \"algorithmiq/tem\"\n",
     "\n",
-    "catalog = QiskitFunctionsCatalog(\n",
-    "    channel=\"ibm_quantum_platform\",\n",
-    "    instance=\"INSTANCE_CRN\",\n",
-    "    token=\"YOUR_API_KEY\",  # Use the 44-character API_KEY you created and saved from the IBM Quantum Platform Home dashboard\n",
-    ")\n",
+    "catalog = QiskitFunctionsCatalog(channel=\"ibm_quantum_platform\")\n",
     "\n",
     "# Load your function\n",
     "tem = catalog.load(tem_function_name)"
