--- a/docs/guides/global-data-quantum-optimizer.ipynb
+++ b/docs/guides/global-data-quantum-optimizer.ipynb
@@ -448,7 +448,7 @@
    "id": "5028c729-6223-4108-bc1e-1c9d95a56bd6",
    "metadata": {},
    "source": [
-    "Authenticate using your [API key](https://quantum.cloud.ibm.com/) and select the Qiskit Function as follows:"
+    "Authenticate using your [API key](https://quantum.cloud.ibm.com/) and select the Qiskit Function as follows. (This snippet assumes you've already [saved your account](/docs/guides/functions#install-qiskit-functions-catalog-client) to your local environment.)"
    ]
   },
   {
@@ -460,11 +460,7 @@
    "source": [
     "from qiskit_ibm_catalog import QiskitFunctionsCatalog\n",
     "\n",
-    "catalog = QiskitFunctionsCatalog(\n",
-    "    channel=\"ibm_quantum_platform\",\n",
-    "    instance=\"INSTANCE_CRN\",\n",
-    "    token=\"YOUR_API_KEY\",  # Use the 44-character API_KEY you created and saved from the IBM Quantum Platform Home dashboard\n",
-    ")\n",
+    "catalog = QiskitFunctionsCatalog(channel=\"ibm_quantum_platform\")\n",
     "\n",
     "# Access function\n",
     "dpo_solver = catalog.load(\"global-data-quantum/quantum-portfolio-optimizer\")"
