--- a/docs/guides/multiverse-computing-singularity.ipynb
+++ b/docs/guides/multiverse-computing-singularity.ipynb
@@ -134,11 +134,7 @@
     "# If you have not previously saved your credentials, follow instructions at\n",
     "# https://quantum.cloud.ibm.com/docs/guides/functions\n",
     "# to authenticate with your API key.\n",
-    "catalog = QiskitFunctionsCatalog(\n",
-    "    channel=\"ibm_quantum_platform\",\n",
-    "    instance=\"INSTANCE_CRN\",\n",
-    "    token=\"YOUR_API_KEY\",  # Use the 44-character API_KEY you created and saved from the IBM Quantum Platform Home dashboard\n",
-    ")\n",
+    "catalog = QiskitFunctionsCatalog(channel=\"ibm_quantum_platform\")\n",
     "\n",
     "# load \"Singularity Machine Learning - Classification\" function by Multiverse Computing\n",
     "singularity = catalog.load(\"multiverse/singularity\")\n",
@@ -653,11 +649,7 @@
    "source": [
     "from qiskit_ibm_catalog import QiskitFunctionsCatalog\n",
     "\n",
-    "catalog = QiskitFunctionsCatalog(\n",
-    "    channel=\"ibm_quantum_platform\",\n",
-    "    instance=\"INSTANCE_CRN\",\n",
-    "    token=\"YOUR_API_KEY\",\n",
-    ")\n",
+    "catalog = QiskitFunctionsCatalog(channel=\"ibm_quantum_platform\")\n",
     "\n",
     "# load function\n",
     "singularity = catalog.load(\"multiverse/singularity\")"
