--- a/docs/guides/q-ctrl-optimization-solver.ipynb
+++ b/docs/guides/q-ctrl-optimization-solver.ipynb
@@ -139,23 +139,19 @@
    "source": [
     "## Get started\n",
     "\n",
-    "First, authenticate using your [IBM Quantum API key](http://quantum.cloud.ibm.com/). Then, select the Qiskit Function as follows:"
+    "First, authenticate using your [IBM Quantum API key](http://quantum.cloud.ibm.com/). Then, select the Qiskit Function as follows. (This snippet assumes you've already [saved your account](/docs/guides/functions#install-qiskit-functions-catalog-client) to your local environment.)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "95a715d2",
    "metadata": {},
    "outputs": [],
    "source": [
     "from qiskit_ibm_catalog import QiskitFunctionsCatalog\n",
     "\n",
-    "catalog = QiskitFunctionsCatalog(\n",
-    "    channel=\"ibm_quantum_platform\",\n",
-    "    instance=\"INSTANCE_CRN\",\n",
-    "    token=\"YOUR_API_KEY\",  # Use the 44-character API_KEY you created and saved from the IBM Quantum Platform Home dashboard\n",
-    ")\n",
+    "catalog = QiskitFunctionsCatalog(channel=\"ibm_quantum_platform\")\n",
     "\n",
     "# Access Function\n",
     "solver = catalog.load(\"q-ctrl/optimization-solver\")"
@@ -180,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "id": "a74fe6a9",
    "metadata": {},
    "outputs": [],
@@ -199,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "id": "d56e1440",
    "metadata": {},
    "outputs": [],
@@ -213,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "id": "0a7255e1",
    "metadata": {},
    "outputs": [
@@ -229,7 +225,9 @@
    ],
    "source": [
     "# Optionally, visualize the graph\n",
-    "nx.draw(maxcut_graph, nx.kamada_kawai_layout(maxcut_graph), node_size=100)"
+    "nx.draw_networkx(\n",
+    "    maxcut_graph, nx.kamada_kawai_layout(maxcut_graph), node_size=100\n",
+    ")"
    ]
   },
   {
@@ -242,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "id": "2546e3e5",
    "metadata": {},
    "outputs": [],
@@ -262,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "id": "cf53550c",
    "metadata": {
     "tags": [
@@ -280,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "16c66d64",
    "metadata": {},
    "outputs": [],
@@ -303,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "id": "856fe992",
    "metadata": {},
    "outputs": [
@@ -311,7 +309,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "DONE\n"
+      "QUEUED\n"
      ]
     }
    ],
@@ -333,18 +331,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "6b571411",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Optimal cut value: 157.0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Poll for results\n",
     "maxcut_result = maxcut_job.result()\n",
@@ -404,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "c2ce65e3",
    "metadata": {},
    "outputs": [
@@ -436,7 +426,7 @@
     "    mvc_graph.add_node(i, weight=_rng.random())\n",
     "\n",
     "# Optionally, visualize the graph\n",
-    "nx.draw(mvc_graph, nx.kamada_kawai_layout(mvc_graph), node_size=200)"
+    "nx.draw_networkx(mvc_graph, nx.kamada_kawai_layout(mvc_graph), node_size=200)"
    ]
   },
   {
