--- a/docs/guides/colibritd-pde.ipynb
+++ b/docs/guides/colibritd-pde.ipynb
@@ -242,23 +242,19 @@
    "source": [
     "## Get started\n",
     "\n",
-    "Fill out the [form to request access to the QUICK-PDE function.](https://forms.office.com/e/kJzViZNVa4) Then, authenticate using your [API key](http://quantum.cloud.ibm.com/) and select the function as follows:"
+    "Fill out the [form to request access to the QUICK-PDE function.](https://forms.office.com/e/kJzViZNVa4) Then, assuming you've already [saved your account](/docs/guides/functions#install-qiskit-functions-catalog-client) to your local environment, select the function as follows:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "95a715d2",
    "metadata": {},
    "outputs": [],
    "source": [
     "from qiskit_ibm_catalog import QiskitFunctionsCatalog\n",
     "\n",
-    "catalog = QiskitFunctionsCatalog(\n",
-    "    channel=\"ibm_quantum_platform\",\n",
-    "    instance=\"INSTANCE_CRN\",\n",
-    "    token=\"YOUR_API_KEY\",  # Use the 44-character API_KEY you created and saved from the IBM Quantum Platform Home dashboard\n",
-    ")\n",
+    "catalog = QiskitFunctionsCatalog(channel=\"ibm_quantum_platform\")\n",
     "\n",
     "quick = catalog.load(\"colibritd/quick-pde\")"
    ]
