--- a/docs/guides/q-ctrl-performance-management.ipynb
+++ b/docs/guides/q-ctrl-performance-management.ipynb
@@ -105,25 +105,20 @@
    "source": [
     "## Get started\n",
     "\n",
-    "Fire Opal Performance Management uses Qiskit v`2.0.0`, which is the recommended version. Supported versions are Qiskit v`2.0.0` - `2.0.2`.\n",
-    "\n",
-    "Authenticate using your [IBM Quantum Platform API key](http://quantum.cloud.ibm.com/), and select the Qiskit Function as follows:"
+    "Fire Opal Performance Management uses Qiskit v`2.0.0`, which is the recommended version. Supported versions are Qiskit >=v`2.0.0`.\n",
+    "Authenticate using your [IBM Quantum Platform API key](http://quantum.cloud.ibm.com/), and select the Qiskit Function as follows. (This snippet assumes you've already [saved your account](/docs/guides/functions#install-qiskit-functions-catalog-client) to your local environment.)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "11af8fb4",
    "metadata": {},
    "outputs": [],
    "source": [
     "from qiskit_ibm_catalog import QiskitFunctionsCatalog\n",
     "\n",
-    "catalog = QiskitFunctionsCatalog(\n",
-    "    channel=\"ibm_quantum_platform\",\n",
-    "    instance=\"INSTANCE_CRN\",\n",
-    "    token=\"YOUR_API_KEY\",  # Use the 44-character API_KEY you created and saved from the IBM Quantum Platform Home dashboard\n",
-    ")\n",
+    "catalog = QiskitFunctionsCatalog(channel=\"ibm_quantum_platform\")\n",
     "\n",
     "# Access Function\n",
     "perf_mgmt = catalog.load(\"q-ctrl/performance-management\")"
