--- a/docs/guides/run-jobs-batch.ipynb
+++ b/docs/guides/run-jobs-batch.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "id": "340d9d45-9ec0-473f-bf17-9dc7eb0804ed",
    "metadata": {},
    "outputs": [],
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "id": "02e53d53-3410-4e07-9c02-c582b97e15e1",
    "metadata": {},
    "outputs": [],
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "id": "fe96e5dd-8237-458d-8657-dd0f71c65f8a",
    "metadata": {},
    "outputs": [],
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "id": "bacbd7eb-2245-4a87-91cf-73d1187c788a",
    "metadata": {
     "tags": [
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "39fa154b-d5f2-411f-8953-367bd5e3c879",
    "metadata": {},
    "outputs": [],
@@ -218,10 +218,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "d1cb86c0-b397-47a9-ad93-055aa71ca327",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Result1: PrimitiveResult([PubResult(data=DataBin(evs=np.ndarray(<shape=(3, 2), dtype=float64>), stds=np.ndarray(<shape=(3, 2), dtype=float64>), ensemble_standard_error=np.ndarray(<shape=(3, 2), dtype=float64>), shape=(3, 2)), metadata={'shots': 4096, 'target_precision': 0.015625, 'circuit_metadata': {}, 'resilience': {}, 'num_randomizations': 32})], metadata={'dynamical_decoupling': {'enable': False, 'sequence_type': 'XX', 'extra_slack_distribution': 'middle', 'scheduling_method': 'alap'}, 'twirling': {'enable_gates': False, 'enable_measure': True, 'num_randomizations': 'auto', 'shots_per_randomization': 'auto', 'interleave_randomizations': True, 'strategy': 'active-accum'}, 'resilience': {'measure_mitigation': True, 'zne_mitigation': False, 'pec_mitigation': False}, 'version': 2})\n",
+      "Result2: PrimitiveResult([SamplerPubResult(data=DataBin(meas=BitArray(<shape=(3, 2), num_shots=4096, num_bits=2>), meas0=BitArray(<shape=(3, 2), num_shots=4096, num_bits=127>), shape=(3, 2)), metadata={'circuit_metadata': {}})], metadata={'execution': {'execution_spans': {'__type__': 'ExecutionSpans', '__value__': {'spans': [DoubleSliceSpan(<start='2025-09-04 17:07:46', stop='2025-09-04 17:07:54', size=24576>)]}}}, 'version': 2})\n"
+     ]
+    }
+   ],
    "source": [
     "batch = Batch(backend=backend)\n",
     "\n",
@@ -250,10 +259,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "8a21ca0e-0373-456c-879f-9bcddda5289a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'id': '1c7e6c9a-9ab3-4eb9-934e-f96f568d92e6', 'backend_name': 'ibm_pinguino2', 'interactive_timeout': 1, 'max_time': 86400, 'active_timeout': 14400, 'state': 'open', 'accepting_jobs': True, 'last_job_started': None, 'last_job_completed': None, 'started_at': None, 'closed_at': None, 'activated_at': None, 'mode': 'batch', 'usage_time': None}\n"
+     ]
+    }
+   ],
    "source": [
     "from qiskit_ibm_runtime import (\n",
     "    QiskitRuntimeService,\n",
@@ -281,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "id": "31ae3a23-e8bd-4dcd-86c1-10f6d7b5cee4",
    "metadata": {},
    "outputs": [],
@@ -290,7 +307,9 @@
     "from qiskit.circuit.random import random_circuit\n",
     "\n",
     "max_circuits = 100\n",
-    "circuits = [random_circuit(5, 5) for _ in range(5 * max_circuits)]\n",
+    "circuits = [pm.run(random_circuit(5, 5)) for _ in range(5 * max_circuits)]\n",
+    "for circuit in circuits:\n",
+    "    circuit.measure_active()\n",
     "all_partitioned_circuits = []\n",
     "for i in range(0, len(circuits), max_circuits):\n",
     "    all_partitioned_circuits.append(circuits[i : i + max_circuits])\n",
