--- a/docs/guides/run-jobs-session.ipynb
+++ b/docs/guides/run-jobs-session.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "117d0471-1f98-489c-906f-8aab836cd877",
    "metadata": {},
    "outputs": [],
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "2694bd4c-2011-4671-9625-3e7e941dd381",
    "metadata": {},
    "outputs": [],
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "192e5e57-2f9d-4f8e-b3e7-1dd31907e8a6",
    "metadata": {},
    "outputs": [],
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "c13875c9-7898-4aa7-83c9-48fae3f07377",
    "metadata": {
     "tags": [
@@ -211,20 +211,25 @@
     "transpiled_circuit_sampler = transpiled_circuit\n",
     "transpiled_circuit_sampler.measure_all()\n",
     "\n",
+    "# Create parameters and mapped observables to submit\n",
     "params = np.random.uniform(size=(2, 3)).T\n",
     "observables = [\n",
-    "    [SparsePauliOp([\"XX\", \"IY\"], [0.5, 0.5])],\n",
-    "    [SparsePauliOp(\"XX\")],\n",
-    "    [SparsePauliOp(\"IY\")],\n",
+    "    SparsePauliOp([\"XX\", \"IY\"], [0.5, 0.5]),\n",
+    "    SparsePauliOp(\"XX\"),\n",
+    "    SparsePauliOp(\"IY\"),\n",
+    "]\n",
+    "mapped_observables = [\n",
+    "    [observable.apply_layout(transpiled_circuit.layout)]\n",
+    "    for observable in observables\n",
     "]\n",
     "\n",
     "sampler_pub = (transpiled_circuit_sampler, params)\n",
-    "estimator_pub = (transpiled_circuit_sampler, observables, params)"
+    "estimator_pub = (transpiled_circuit_sampler, mapped_observables, params)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "c6646bed-3064-488f-b2ff-da9ba793775a",
    "metadata": {},
    "outputs": [],
@@ -257,16 +262,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "861cf6b3-9695-41eb-9d3d-d5293880ca75",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Result1: PrimitiveResult([PubResult(data=DataBin(evs=np.ndarray(<shape=(3, 2), dtype=float64>), stds=np.ndarray(<shape=(3, 2), dtype=float64>), ensemble_standard_error=np.ndarray(<shape=(3, 2), dtype=float64>), shape=(3, 2)), metadata={'shots': 4096, 'target_precision': 0.015625, 'circuit_metadata': {}, 'resilience': {}, 'num_randomizations': 32})], metadata={'dynamical_decoupling': {'enable': False, 'sequence_type': 'XX', 'extra_slack_distribution': 'middle', 'scheduling_method': 'alap'}, 'twirling': {'enable_gates': False, 'enable_measure': True, 'num_randomizations': 'auto', 'shots_per_randomization': 'auto', 'interleave_randomizations': True, 'strategy': 'active-accum'}, 'resilience': {'measure_mitigation': True, 'zne_mitigation': False, 'pec_mitigation': False}, 'version': 2})\n",
+      "Result2: PrimitiveResult([SamplerPubResult(data=DataBin(meas=BitArray(<shape=(3, 2), num_shots=4096, num_bits=2>), meas0=BitArray(<shape=(3, 2), num_shots=4096, num_bits=127>), shape=(3, 2)), metadata={'circuit_metadata': {}})], metadata={'execution': {'execution_spans': ExecutionSpans([DoubleSliceSpan(<start='2025-09-04 15:52:07', stop='2025-09-04 15:52:15', size=24576>)])}, 'version': 2})\n"
+     ]
+    }
+   ],
    "source": [
     "session = Session(backend=backend)\n",
     "\n",
     "# If using qiskit-ibm-runtime earlier than 0.24.0, change `mode=` to `session=`\n",
     "estimator = Estimator(mode=session)\n",
-    "estimator = Sampler(mode=session)\n",
+    "sampler = Sampler(mode=session)\n",
     "job1 = estimator.run([estimator_pub])\n",
     "job2 = sampler.run([sampler_pub])\n",
     "print(f\"Result1: {job1.result()}\")\n",
@@ -307,10 +321,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "82a2599e-3e32-4e01-9a36-b77a56af7647",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'id': '5a6d4397-42c6-4dc6-969a-b1c90286a715', 'backend_name': 'ibm_pinguino2', 'interactive_timeout': 60, 'max_time': 86400, 'active_timeout': 14400, 'state': 'open', 'accepting_jobs': True, 'last_job_started': None, 'last_job_completed': None, 'started_at': None, 'closed_at': None, 'activated_at': None, 'mode': 'dedicated', 'usage_time': None}\n"
+     ]
+    }
+   ],
    "source": [
     "from qiskit_ibm_runtime import (\n",
     "    QiskitRuntimeService,\n",
@@ -356,10 +378,8 @@
     "def cost_func(params, ansatz, hamiltonian, estimator):\n",
     "    # Return estimate of energy from estimator\n",
     "\n",
-    "    energy = (\n",
-    "        estimator.run(ansatz, hamiltonian, parameter_values=params)\n",
-    "        .result()\n",
-    "        .values[0]\n",
+    "    energy = sum(\n",
+    "        estimator.run([(ansatz, hamiltonian, params)]).result()[0].data.evs\n",
     "    )\n",
     "    return energy\n",
     "\n",
@@ -370,6 +390,9 @@
     "su2_ansatz = efficient_su2(hamiltonian.num_qubits)\n",
     "pm = generate_preset_pass_manager(backend=backend, optimization_level=3)\n",
     "ansatz = pm.run(su2_ansatz)\n",
+    "mapped_hamiltonian = [\n",
+    "    operator.apply_layout(ansatz.layout) for operator in hamiltonian\n",
+    "]\n",
     "\n",
     "num_params = ansatz.num_parameters\n",
     "x0 = 2 * np.pi * np.random.random(num_params)\n",
@@ -380,7 +403,11 @@
     "# If using qiskit-ibm-runtime earlier than 0.24.0, change `mode=` to `session=`\n",
     "estimator = Estimator(mode=session, options={\"default_shots\": int(1e4)})\n",
     "res = minimize(\n",
-    "    cost_func, x0, args=(ansatz, hamiltonian, estimator), method=\"cobyla\"\n",
+    "    cost_func,\n",
+    "    x0,\n",
+    "    args=(ansatz, mapped_hamiltonian, estimator),\n",
+    "    method=\"cobyla\",\n",
+    "    options={\"maxiter\": 25},\n",
     ")\n",
     "\n",
     "# Close the session because no context manager was used.\n",
@@ -416,7 +443,11 @@
     "\n",
     "def minimize_thread(estimator, method):\n",
     "    return minimize(\n",
-    "        cost_func, x0, args=(ansatz, hamiltonian, estimator), method=method\n",
+    "        cost_func,\n",
+    "        x0,\n",
+    "        args=(ansatz, mapped_hamiltonian, estimator),\n",
+    "        method=method,\n",
+    "        options={\"maxiter\": 25},\n",
     "    )\n",
     "\n",
     "\n",
